--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -21,40 +21,40 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "@primer/octicons-react": "^9.6.0",
-    "bootstrap": "^4.3.1",
-    "immutable": "^4.0.0-rc.12",
-    "moment": "^2.24.0",
-    "react": "^16.8.3",
-    "react-bootstrap-table": "^4.3.1",
-    "react-dom": "^16.8.3",
-    "react-measure": "^2.2.4",
+    "@primer/octicons-react": "9.6.0",
+    "bootstrap": "4.3.1",
+    "immutable": "4.0.0-rc.12",
+    "moment": "2.24.0",
+    "react": "16.8.3",
+    "react-bootstrap-table": "4.3.1",
+    "react-dom": "16.8.3",
+    "react-measure": "2.2.4",
     "react-refetch": "4.0.0-0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0",
-    "reactstrap": "^8.2.0",
-    "recharts": "^2.0.0-beta.1"
+    "react-router-dom": "5.1.2",
+    "react-scripts": "3.4.0",
+    "reactstrap": "8.2.0",
+    "recharts": "2.0.0-beta.1"
   },
   "devDependencies": {
     "@types/jest": "24.0.23",
     "@types/node": "12.12.14",
     "@types/react": "16.9.15",
-    "@types/react-bootstrap-table": "^4.3.7",
+    "@types/react-bootstrap-table": "4.3.7",
     "@types/react-dom": "16.9.4",
-    "@types/react-measure": "^2.0.5",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/reactstrap": "^8.2.0",
-    "@types/recharts": "^1.1.14",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "eslint": "^6.6.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react-hooks": "^4.0.2",
-    "http-proxy-middleware": "^0.20.0",
-    "prettier": "^2.0.5",
-    "sort-package-json": "^1.42.2",
+    "@types/react-measure": "2.0.5",
+    "@types/react-router-dom": "5.1.3",
+    "@types/reactstrap": "8.2.0",
+    "@types/recharts": "1.1.14",
+    "@typescript-eslint/eslint-plugin": "2.33.0",
+    "@typescript-eslint/parser": "2.33.0",
+    "eslint": "6.6.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-prettier": "3.1.3",
+    "eslint-plugin-react-hooks": "4.0.2",
+    "http-proxy-middleware": "0.20.0",
+    "prettier": "2.0.5",
+    "sort-package-json": "1.42.2",
     "typescript": "3.7.3"
   }
 }
