--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -14,6 +14,14 @@
     "start": "react-scripts start",
     "test": "react-scripts test"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --fix"
+  },
   "browserslist": [
     ">0.2%",
     "not dead",
@@ -54,6 +62,8 @@
     "eslint-plugin-react": "7.20.0",
     "eslint-plugin-react-hooks": "4.0.2",
     "http-proxy-middleware": "0.20.0",
+    "husky": ">=4",
+    "lint-staged": ">=10",
     "prettier": "2.0.5",
     "sort-package-json": "1.42.2",
     "typescript": "3.7.3"
