--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -45,7 +45,10 @@
     "node-sass": "4.14.1",
     "random": "2.2.0",
     "react": "16.8.3",
-    "react-bootstrap-table": "4.3.1",
+    "react-bootstrap-table-next": "4.0.2",
+    "react-bootstrap-table2-filter": "1.3.3",
+    "react-bootstrap-table2-paginator": "2.1.2",
+    "react-bootstrap-table2-toolkit": "2.1.3",
     "react-dom": "16.8.3",
     "react-measure": "2.2.4",
     "react-refetch": "4.0.0-0",
@@ -59,7 +62,10 @@
     "@types/node": "12.12.14",
     "@types/random": "2.1.1",
     "@types/react": "16.9.15",
-    "@types/react-bootstrap-table": "4.3.7",
+    "@types/react-bootstrap-table-next": "4.0.2",
+    "@types/react-bootstrap-table2-filter": "1.3.0",
+    "@types/react-bootstrap-table2-paginator": "2.1.1",
+    "@types/react-bootstrap-table2-toolkit": "2.1.2",
     "@types/react-dom": "16.9.4",
     "@types/react-measure": "2.0.5",
     "@types/react-router-dom": "5.1.3",
