Add initial end-to-end test with Cypress #587

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,14 @@ matrix:
 
     - language: node_js
       node_js: node
+      addons:
+        apt:
+          packages:
+            - libgconf-2-4
+      cache:
+        npm: true
+        directories:
+          - ~/.cache
       before_script:
         - cd atcoder-problems-frontend/
       script:
@@ -32,3 +40,5 @@ matrix:
         - yarn build
         - yarn test
         - yarn lint
+        - yarn start & wait-on http://localhost:3000
+        - yarn cypress:run
