Fix CI: Use serve in Travis
When we started webpack-dev-server in Travis, it failed because of
inotify limitation. We cannot easily remove watch option from the
dev-server, since it's wrapped by react-scripts.

So, I decided to introduce serve package which is used in an example
from Cypress.
https://github.com/cypress-io/cypress-example-kitchensink

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,5 +40,6 @@ matrix:
         - yarn build
         - yarn test
         - yarn lint
-        - yarn start &
+        - yarn prepare-ci
+        - yarn start:ci &
         - yarn cypress:run
