--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -11,9 +11,11 @@
     "format": "yarn run sort-package-json && yarn run prettier && yarn run lint:fix",
     "lint": "eslint --ignore-path .gitignore \"**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "yarn run lint --fix",
+    "prepare-ci": "rm -r serve && mkdir serve && cp -r build serve/atcoder",
     "prettier": "prettier --write --ignore-path .gitignore \"**/*.{css,html,js,json,jsx,md,ts,tsx}\"",
     "sort-package-json": "sort-package-json",
     "start": "react-scripts start",
+    "start:ci": "serve -l 3000",
     "test": "react-scripts test"
   },
   "husky": {
@@ -81,6 +83,7 @@
     "husky": "4.2.5",
     "lint-staged": "10.2.2",
     "prettier": "2.0.5",
+    "serve": "11.3.1",
     "sort-package-json": "1.42.2",
     "typescript": "3.7.3"
   }
