CI: Add --no-clipboard option to serve to fix CI

--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -15,7 +15,7 @@
     "prettier": "prettier --write --ignore-path .gitignore \"**/*.{css,html,js,json,jsx,md,ts,tsx}\"",
     "sort-package-json": "sort-package-json",
     "start": "react-scripts start",
-    "start:ci": "serve -l 3000",
+    "start:ci": "serve --no-clipboard -l 3000",
     "test": "react-scripts test"
   },
   "husky": {
