--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -51,6 +51,7 @@
     "react": "16.8.3",
     "react-bootstrap-table": "4.3.1",
     "react-dom": "16.8.3",
+    "react-helmet": "6.1.0",
     "react-measure": "2.2.4",
     "react-refetch": "4.0.0-0",
     "react-router-dom": "5.1.2",
