--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -66,6 +66,7 @@
     "@types/react": "16.9.15",
     "@types/react-bootstrap-table": "4.3.7",
     "@types/react-dom": "16.9.4",
+    "@types/react-helmet": "6.0.0",
     "@types/react-measure": "2.0.5",
     "@types/react-router-dom": "5.1.3",
     "@types/reactstrap": "8.2.0",
