--- a/atcoder-problems-backend/Cargo.toml
+++ b/atcoder-problems-backend/Cargo.toml
@@ -21,6 +21,7 @@ serde_json = "1.0"
 # SQL
 r2d2 = "0.8.7"
 diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
+sqlx = { version = "0.3.5", features = ["postgres"]}
 
 # Web framework
 tide = "0.9"
