--- a/atcoder-problems-backend/Cargo.toml
+++ b/atcoder-problems-backend/Cargo.toml
@@ -3,6 +3,7 @@ name = "atcoder-problems-backend"
 version = "0.1.0"
 authors = ["kenkoooo <kenkou.n@gmail.com>"]
 edition = "2018"
+publish = false
 
 [dependencies]
 # Logging
@@ -21,6 +22,7 @@ serde_json = "1.0"
 # SQL
 r2d2 = "0.8.7"
 diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
+sql-client = { path = "./sql-client" }
 
 # Web framework
 tide = "0.9"
