--- a/atcoder-problems-backend/sql-client/Cargo.toml
+++ b/atcoder-problems-backend/sql-client/Cargo.toml
@@ -9,3 +9,7 @@ publish = false
 
 [dependencies]
 sqlx = { version = "0.3.5", features = ["postgres"] }
+async-trait = "0.1.30"
+serde = { version = "1.0", features = ["derive"] }
+uuid = { version = "0.8", features = ["serde", "v4"] }
+thiserror = "1.0.20"
