--- a/atcoder-problems-backend/sql-client/Cargo.toml
+++ b/atcoder-problems-backend/sql-client/Cargo.toml
@@ -13,3 +13,4 @@ async-trait = "0.1.30"
 serde = { version = "1.0", features = ["derive"] }
 uuid = { version = "0.8", features = ["serde", "v4"] }
 thiserror = "1.0.20"
+async-std = { version = "1.6", features = ["attributes"] }
